@@ -1,9 +1,9 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
-USE_RUBY="ruby18 ruby19"
+USE_RUBY="ruby19 ruby20"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_EXTRADOC="README.rdoc"
@@ -22,7 +22,7 @@ IUSE=""
 
 RESTRICT="test" # Broken right now due to bad ruby syntax. Should fix.
 
-ruby_add_bdepend "test? ( dev-ruby/rspec:0 >=dev-ruby/stale_fish-1.3.0 )"
+#ruby_add_bdepend "test? ( dev-ruby/rspec:0 >=dev-ruby/stale_fish-1.3.0 )"
 
 ruby_add_rdepend ">=dev-ruby/rest-client-1.6.0
 	>=dev-ruby/nokogiri-1.5.5
